--- a/07/PetApp/Web/Views/Pet/Create.cshtml
+++ b/07/PetApp/Web/Views/Pet/Create.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>CatViewModel</h4>
         <hr />
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GenderId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GenderId, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.DropDownListFor(model=>model.GenderId, EnumHelper.GetSelectList(typeof(Web.Models.Gender)), "Select Gender", new { @class="form-control"})
                 @Html.ValidationMessageFor(model => model.GenderId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CatType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CatType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.CatType,ViewBag.CatType as SelectList,"Please select",  new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CatType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -65,7 +65,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FurType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FurType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.FurType, ViewBag.FurType as SelectList, "Please select", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FurType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -81,3 +81,9 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+@section scripts{
+    @Scripts.Render("~/bundles/jqueryval")
+}
+@section time{
+   Current Time:  @DateTime.Now.ToShortTimeString()
+    }
