--- a/07/PetApp/Web/Views/Pet/Index.cshtml
+++ b/07/PetApp/Web/Views/Pet/Index.cshtml
@@ -20,6 +20,7 @@
             <th scope="row">@cats.Id</th>
             <td>@cats.Name</td>
             <td>@cats.Gender</td>
+            <td>@Html.ActionLink("Details","GetCatById", new { id=cats.Id})</td>
         </tr>
         }
     </tbody>
