--- a/07/PetApp/Web/Views/Shared/_Layout.cshtml
+++ b/07/PetApp/Web/Views/Shared/_Layout.cshtml
@@ -39,5 +39,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @RenderSection("time", required:false)
 </body>
 </html>
