--- a/07/PetApp/Web/Views/Pet/Edit.cshtml
+++ b/07/PetApp/Web/Views/Pet/Edit.cshtml
@@ -1,32 +1,25 @@
 ﻿@model Web.Models.CatViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>CatViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model=>model.Id)
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.GenderId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-               @Html.DropDownListFor(model=>model.GenderId, EnumHelper.GetSelectList(typeof(Web.Models.Gender)), "Select Gender", new { @class="form-control"})
-                @Html.ValidationMessageFor(model => model.GenderId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -55,24 +48,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CatType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.CatType,ViewBag.CatType as SelectList,"Please select",  new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CatType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FurType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.FurType, ViewBag.FurType as SelectList, "Please select", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FurType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -81,6 +58,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-@section scripts{
-    @Scripts.Render("~/bundles/jqueryval")
-}
