--- a/07/PetApp/Web/Views/Pet/Index.cshtml
+++ b/07/PetApp/Web/Views/Pet/Index.cshtml
@@ -20,7 +20,8 @@
             <th scope="row">@cats.Id</th>
             <td>@cats.Name</td>
             <td>@cats.Gender</td>
-            <td>@Html.ActionLink("Details","GetCatById", new { id=cats.Id})</td>
+            <td>@Html.ActionLink("Details", "GetCatById", new { id = cats.Id })</td>
+            <td>@Html.ActionLink("Edit", "Edit", new { id = cats.Id })</td>
         </tr>
         }
     </tbody>
