--- a/07/PetApp/Web/Views/Pet/Edit.cshtml
+++ b/07/PetApp/Web/Views/Pet/Edit.cshtml
@@ -5,16 +5,28 @@
 }
 
 <h2>Edit</h2>
-
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script>
+    $(document).ready(function () {
+       
+        var cat = @TempData["CatType"];
+        $("#catTypeid").val(cat);
+        var fur = @TempData["FurType"];
+        $("#furTypeid").val(fur);
+        @*var dob = @TempData["Dob"];
+        var fdob = Date.parse(dob);
+        $("#dobid").val(fdob);*@
+});
+</script>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>CatViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model=>model.Id)
+        @Html.HiddenFor(model => model.Id)
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -22,11 +34,17 @@
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.GenderId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.GenderId, EnumHelper.GetSelectList(typeof(Web.Models.Gender)), "Select Gender", new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.GenderId, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Dob, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Dob, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Dob, new { htmlAttributes = new { @type="date", @class = "form-control", @Value = Model.Dob.Value.Date.ToString("MM/dd/yyyy") } })
                 @Html.ValidationMessageFor(model => model.Dob, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -46,7 +64,21 @@
                 @Html.ValidationMessageFor(model => model.ribLength, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.CatType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.CatType, (IEnumerable<SelectListItem>)ViewBag.CatType, "Please select", new { @id = "catTypeid", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CatType, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.FurType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.FurType, ViewBag.FurType as SelectList, "Please select", new { @id = "furTypeid", @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.FurType, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
