Using Mapper and Textbox for

--- a/07/PetApp/Web/Views/Pet/Edit.cshtml
+++ b/07/PetApp/Web/Views/Pet/Edit.cshtml
@@ -13,9 +13,6 @@
         $("#catTypeid").val(cat);
         var fur = @TempData["FurType"];
         $("#furTypeid").val(fur);
-        @*var dob = @TempData["Dob"];
-        var fdob = Date.parse(dob);
-        $("#dobid").val(fdob);*@
 });
 </script>
 @using (Html.BeginForm())
@@ -44,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Dob, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Dob, new { htmlAttributes = new { @type="date", @class = "form-control", @Value = Model.Dob.Value.Date.ToString("MM/dd/yyyy") } })
+                @Html.TextBoxFor(model => model.Dob, new  { @class = "form-control", @Value = Model.Dob.Value.Date.ToString("MM/dd/yyyy") } )
                 @Html.ValidationMessageFor(model => model.Dob, "", new { @class = "text-danger" })
             </div>
         </div>
