--- a/08/CoreMVC/CoreMVC/Views/SuperHero/Index.cshtml
+++ b/08/CoreMVC/CoreMVC/Views/SuperHero/Index.cshtml
@@ -1,65 +1,73 @@
 ﻿@model IEnumerable<CoreMVC.Models.SuperHero>
 
 @{
-    ViewData["Title"] = "Index";
+	ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+ <a asp-action="Add">Add New Super Hero</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.alias)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.hideOuts)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.superPowers)
-            </th>
-            
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.alias)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.hideOuts)
-            </td>
-            <td>
-                <ul>
-                    @foreach(var sp in item.superPowers)
-                    {
-                       <li>@sp.Name</li> 
-                    }
-                </ul>
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
+ <thead>
+  <tr>
+   <th>
+				@Html.DisplayNameFor(model => model.id)
+   </th>
+   <th>
+				@Html.DisplayNameFor(model => model.name)
+   </th>
+   <th>
+				@Html.DisplayNameFor(model => model.alias)
+   </th>
+   <th>
+				@Html.DisplayNameFor(model => model.hideOuts)
+   </th>
+   <th>
+				@Html.DisplayNameFor(model => model.superPowers)
+   </th>
+
+   <th></th>
+  </tr>
+ </thead>
+ <tbody>
+		@foreach (var item in Model)
+		{
+	  <tr>
+	   <td>
+					@Html.DisplayFor(modelItem => item.id)
+	   </td>
+	   <td>
+					@Html.DisplayFor(modelItem => item.name)
+	   </td>
+	   <td>
+					@Html.DisplayFor(modelItem => item.alias)
+	   </td>
+	   <td>
+					@Html.DisplayFor(modelItem => item.hideOuts)
+	   </td>
+	   <td>
+			@if (item.superPowers.Count>0)
+			{
+			<ul>
+					@foreach (var sp in item.superPowers)
+					{
+					    <li>@sp.Name</li>
+					}
+			</ul>
+			<a asp-action="Add" asp-controller="SuperPower" asp-route-id=@item.id>Add more super power</a>
+			}
+			@if(item.superPowers.Count == 0){
+				<a asp-action="Add" asp-controller="SuperPower" asp-route-id=@item.id>Add super power</a>
+				}
+		</td>
+	   <td>
+					@Html.ActionLink("Edit", "Edit", new {  id=item.id }) |
+					@Html.ActionLink("Details", "Details", new {  id=item.id  }) |
+					@Html.ActionLink("Delete", "Delete", new {  id=item.id })
+	   </td>
+	  </tr>
+		}
+ </tbody>
 </table>
