--- a/08/CoreMVC/CoreMVC/Views/SuperHero/Index.cshtml
+++ b/08/CoreMVC/CoreMVC/Views/SuperHero/Index.cshtml
@@ -63,7 +63,7 @@
 				}
 		</td>
 	   <td>
-					@Html.ActionLink("Edit", "Edit", new {  id=item.id }) |
+					@Html.ActionLink("Edit", "Update", new {  id=item.id }) |
 					@Html.ActionLink("Details", "Details", new {  id=item.id  }) |
 					@Html.ActionLink("Delete", "Delete", new {  id=item.id })
 	   </td>
