--- a/07/PetApp/Web/Views/Home/Index.cshtml
+++ b/07/PetApp/Web/Views/Home/Index.cshtml
@@ -5,3 +5,7 @@
 <div class="jumbotron">
     <h1>Pet Application</h1>
 </div>
+<div style="font-size:medium">
+    @Html.ActionLink("Login", "Login")
+    @Html.ActionLink("Sign-Up", "Registration")
+</div>
